--- a/DemoSlk/.classpath
+++ b/DemoSlk/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/SLKTECHLABS/tarun.patel/Downloads/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/SLKTECHLABS/tarun.patel/git/DemoSlk/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/SLKTECHLABS/tarun.patel/git/DemoSlk/lib/jackson-core-2.2.3.jar.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
